# TuSDK-EvaVideo-iOS-Demo

./: README.md
Example/: Podfile
Example/TuSDKEVADemo/TuSDKEvaDemo/: AppDelegate.mm  Info.plist  TuSDKEvaDemo.entitlements  TuSDKFramework.h
Example/TuSDKEVADemo/TuSDKEvaDemo.xcodeproj/: project.pbxproj
Example/TuSDKEVADemo/TuSDKEvaDemo/Assets.xcassets/edit_checkbox_sel.imageset/: Contents.json
Example/TuSDKEVADemo/TuSDKEvaDemo/Assets.xcassets/edit_checkbox_unsel.imageset/: Contents.json
Example/TuSDKEVADemo/TuSDKEvaDemo/Assets.xcassets/edit_ic_add.imageset/: Contents.json
Example/TuSDKEVADemo/TuSDKEvaDemo/Assets.xcassets/icon_replace.imageset/: Contents.json
Example/TuSDKEVADemo/TuSDKEvaDemo/Assets.xcassets/style_add.imageset/: Contents.json
Example/TuSDKEVADemo/TuSDKEvaDemo/Assets.xcassets/style_cancel.imageset/: Contents.json
Example/TuSDKEVADemo/TuSDKEvaDemo/Assets.xcassets/style_edit.imageset/: Contents.json
Example/TuSDKEVADemo/TuSDKEvaDemo/Base.lproj/: LaunchScreen.storyboard
Example/TuSDKEVADemo/TuSDKEvaDemo/Classes/Download/: DownLoadFileModel.h  DownLoadFileModel.m  DownLoadListManager.m
Example/TuSDKEVADemo/TuSDKEvaDemo/Classes/EVAModel/: EVAPreviewViewController.h  EVAPreviewViewController.mm  (+10 more)
Example/TuSDKEVADemo/TuSDKEvaDemo/resource/TuSDK/TuSDKPulseEva.framework/: CMakeLists.txt  Info.plist
Example/TuSDKEVADemo/TuSDKEvaDemo/resource/TuSDK/TuSDKPulseEva.framework/Headers/: TUPDynEvaDirector.h  TUPEvaDirector.h  TUPEvaModel.h  TUPEvaPlayer.h  TUPEvaProducer.h  TuSDKPulseEva.h
Example/TuSDKEVADemo/TuSDKEvaDemo/resource/TuSDK/TuSDKPulseEva.framework/Modules/: module.modulemap
Example/TuSDKEVADemo/TuSDKEvaDemo/resource/TuSDK/TuSDKPulseEva.framework/_CodeSignature/: CodeResources
Example/TuSDKEvaDemo.xcworkspace/: contents.xcworkspacedata
Example/TuSDKEvaDemo.xcworkspace/xcuserdata/fanshengle.xcuserdatad/: UserInterfaceState.xcuserstate
Example/TuSDKEvaDemo.xcworkspace/xcuserdata/liupengcheng.xcuserdatad/: UserInterfaceState.xcuserstate
Example/TuSDKEvaDemo.xcworkspace/xcuserdata/mac.xcuserdatad/: UserInterfaceState.xcuserstate
Example/TuSDKEvaDemo.xcworkspace/xcuserdata/tutu.xcuserdatad/: UserInterfaceState.xcuserstate
Example/TuSDKEvaDemo.xcworkspace/xcuserdata/zoeric.xcuserdatad/: UserInterfaceState.xcuserstate
ReleaseNote/: Release-Notes-3.0.4-iOS.md  Release-Notes-3.0.5-iOS.md  Release-Notes-3.1.2-iOS.md  Release-Notes-3.1.4-iOS.md  Release-Notes-3.2.0-iOS.md
(+116 files in other folders)
